# coral-launcher

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
scripts/: build-exe-msvc.cmd  check-windows-build.ps1  prepare-logo.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
