[package]
name = "coral-launcher"
version = "0.1.0"
description = "A lightweight Minecraft launcher"
authors = ["Coral Launcher"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
futures-util = "0.3"
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
rfd = "0.15"
tauri = { version = "2", features = [] }
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "process", "rt-multi-thread"] }
urlencoding = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "stream"] }

[target.'cfg(not(windows))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
